--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,27 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.thisit.southavencrm">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name=".common.ConfigApp"
         android:allowBackup="true"
         android:icon="@mipmap/southaven_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/southaven_logo"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_configs"
+        android:requestLegacyExternalStorage="true"
+        android:preserveLegacyExternalStorage="true"
         android:theme="@style/Theme.SouthavenCrm">
-        <activity android:name=".RegisterActivity"></activity>
+        <activity
+            android:name=".login.view.LoginActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
+            android:name=".NotificationActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
         <activity
             android:name=".ECardActivity"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyA9ZXddogVa3SzehWB4l_CIjw9irbuFpQk"/>
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashActivity"
             android:theme="@style/Theme.Design.NoActionBar"
             tools:ignore="IntentFilterExportedReceiver">
             <intent-filter>
@@ -32,14 +47,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ForgotpasswordActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".HomeScreenActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
-       
     </application>
-
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 </manifest>
