--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,28 +14,28 @@
         android:allowBackup="true"
         android:icon="@mipmap/southaven_logo"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_configs"
+        android:preserveLegacyExternalStorage="true"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/southaven_logo"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_configs"
-        android:requestLegacyExternalStorage="true"
-        android:preserveLegacyExternalStorage="true"
         android:theme="@style/Theme.SouthavenCrm">
         <activity
             android:name=".login.view.LoginActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
         <activity
-            android:name=".NotificationActivity"
+            android:name=".Notification.view.NotificationActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
         <activity
             android:name=".registration.view.RegisterActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
         <activity
-            android:name=".ECardActivity"
+            android:name=".dashboard.view.ECardActivity"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA9ZXddogVa3SzehWB4l_CIjw9irbuFpQk"/>
+            android:value="AIzaSyA9ZXddogVa3SzehWB4l_CIjw9irbuFpQk" />
 
         <activity
             android:name=".SplashActivity"
@@ -56,5 +56,5 @@
     </application>
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 </manifest>
