--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-
     <uses-permission android:name="com.androidtutorialpoint.mymapsappsdirection.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:name=".common.ConfigApp"
         android:allowBackup="true"
@@ -27,6 +30,9 @@
         android:roundIcon="@mipmap/southaven_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.SouthavenCrm">
+        <activity
+            android:name=".OrderDetail.view.OrderDetailActivity"
+            android:theme="@style/Theme.Design.NoActionBar"/>
         <activity
             android:name=".login.view.LoginActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
@@ -61,7 +67,5 @@
             android:name=".HomeScreenActivity"
             android:theme="@style/Theme.Design.NoActionBar" />
     </application>
-    <uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true" />
+
 </manifest>
